# cmake

./: CMakeLists.txt  LICENSE  README.md
main/: main.cpp
tools/: CMakeLists.txt  math.cpp  math.h
